# TrainSysSimulator

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.hpp  README.md  Simulation.cpp  Simulation.h  TrackGraph.cpp  TrackGraph.h  TrackGraph.hpp  Train.cpp  Train.hpp  graph.drawio  graph.txt  infrastructure.drawio  main.cpp
src/: Simulator.hpp  TrackGraph.hpp  Train.hpp  TrainSystem.hpp  main.cpp
